# lazybacktest

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  run_phase3_tests.py  run_phase4_tests.py
backend/alembic/: env.py
backend/alembic/versions/: 1c153ee17b84_initial_migration.py  557bcf16f26d_add_dividends_and_stock_splits_to_stock_.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/core/: database.py  security.py
backend/app/models/: stock.py  strategy.py  user.py
backend/app/modules/backtest/: engine.py  indicators.py  metrics.py  optimization.py  signals.py  strategies.py
backend/app/modules/stock_data/: fetcher.py  repository.py
backend/app/services/: line_notify.py
backend/scripts/: e2e_test.py  seed_data.py  seed_data_2330.csv  seed_db.py
backend/tests/integration/api/: test_backtest_api.py  test_backtest_api_v2.py  test_optimization_api.py  test_setup.py  test_stocks_api.py
backend/tests/unit/engine/: test_backtest_engine.py  test_engine_accuracy.py  test_position_sizing.py  test_timing.py
backend/tests/unit/indicators/: __init__.py  test_rsi.py  test_sma.py
backend/tests/unit/metrics/: __init__.py  test_buy_hold.py  test_performance_metrics.py  test_yearly_monthly.py
backend/tests/unit/models/: test_db_models.py
backend/tests/unit/optimization/: test_grid_search.py
backend/tests/unit/signals/: __init__.py  test_crossover.py
backend/tests/unit/stock_data/: __init__.py  test_fetcher.py  test_repository.py
(+51 files in other folders)
